fix: CRITICAL - Remove Python proxy, harden AI safety, fix Security config